# fastapi-practice

./: Pipfile  README.md  main.py  pyproject.toml
09_body-nested_models/: main.py
10_schema_extra/: main.py
14_Response_Model/: main.py
15_extra_models/: main.py
18_request_files/: main.py
20_heading_errors/: main.py
24_Dependencies/: main_1.py  main_2.py  main_3.py  main_4.py  main_5.py  main_6.py
